--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test-w": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --verbose --runInBand --testLocationInResults --setupFiles dotenv/config",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --verbose --runInBand --testLocationInResults --setupFiles dotenv/config",
     "test:watch": "npm run test -- --watch",
+    "test-w:watch": "npm run test-w -- --watch",
     "start": "node -r dotenv/config server.js",
     "start:watch": "nodemon -r dotenv/config server.js",
     "setup-db": "node -r dotenv/config setup-db.js",
